# wnn

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  activate.sh  analyze_and_run_best.py  debug_kv.py  launch_tier0_experiment.sh  monitor_and_start_balanced.sh  monitor_and_sweep.sh  monitor_overnight.sh  monitor_sweep_and_analyze.sh  monitor_two_tier.sh  nohup.out  overnight_sweep.out  pyproject.toml  research.code-workspace  run_bitwise_context_sweep.py  run_bitwise_modes_experiment.py  run_bitwise_optimization.py  run_coarse_fine_search.py  run_fulldata_optimization.sh  run_multistage_optimization.py  run_ngram_sweep.sh  run_overnight_ws.sh  run_phased_search.py  run_trainparts_comparison.py  run_ws0v2_then_rest.sh  start-worker.sh  todo.md
dashboard/: .gitignore  Cargo.toml  README.md  dashboard.db
dashboard/certs/: cert.pem  key.pem
dashboard/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
dashboard/frontend/.svelte-kit/types/: route_meta_data.json
dashboard/frontend/.svelte-kit/types/src/routes/: $types.d.ts
dashboard/frontend/.svelte-kit/types/src/routes/experiments/: $types.d.ts
dashboard/frontend/.svelte-kit/types/src/routes/flows/: $types.d.ts
dashboard/frontend/src/: app.css  app.html  hooks.server.ts
dashboard/frontend/src/lib/: dateFormat.ts  stores.ts  types.ts
dashboard/frontend/src/lib/components/: BitwiseClusterStats.svelte  SeedCheckpointSelector.svelte  TierConfigEditor.svelte
dashboard/frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
dashboard/frontend/src/routes/checkpoints/: +page.svelte
dashboard/frontend/src/routes/experiments/: +page.svelte
dashboard/frontend/src/routes/experiments/[id]/: +page.svelte
dashboard/frontend/src/routes/flows/: +page.svelte
dashboard/frontend/src/routes/flows/[id]/: +page.svelte
dashboard/frontend/src/routes/flows/new/: +page.svelte
dashboard/frontend/src/routes/settings/: +page.svelte
dashboard/ios/: README.md
dashboard/ios/WNNDashboard/: Package.swift  project.yml
dashboard/ios/WNNDashboard/.build/: build.db  plugin-tools.yaml
dashboard/ios/WNNDashboard/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
dashboard/ios/WNNDashboard/.build/arm64-apple-macosx/debug/Modules/: WNNDashboard.swiftdoc  WNNDashboard.swiftmodule  WNNDashboard.swiftsourceinfo
dashboard/ios/WNNDashboard/.build/arm64-apple-macosx/debug/WNNDashboard.build/: APIClient.dia  AnyCodable.d  AnyCodable.swiftdeps  Checkpoint.d  Checkpoint.swiftdeps  CheckpointsListView.dia  CheckpointsViewModel.dia  ConnectionManager.d  ConnectionManager.swiftdeps  ContentView.d  ContentView.swiftdeps  DashboardView.dia  DashboardViewModel.d  DashboardViewModel.swiftdeps  DualAxisChartView.dia  Experiment.d  Experiment.swiftdeps  Flow.d  Flow.swiftdeps  FlowCardView.d  FlowCardView.swiftdeps  FlowDetailView.dia  Phase.d  (+41 more)
dashboard/ios/WNNDashboard/Sources/WNNDashboard/: ContentView.swift  Info.plist  WNNDashboardApp.swift
dashboard/ios/WNNDashboard/Sources/WNNDashboard/Models/: AnyCodable.swift  BitwiseClusterStat.swift  Checkpoint.swift  Experiment.swift  Flow.swift  GatingRun.swift  GenomeEvaluation.swift  Iteration.swift  Phase.swift  Snapshot.swift  StatusEnums.swift  ValidationSummary.swift  WebSocketMessage.swift
dashboard/ios/WNNDashboard/Sources/WNNDashboard/Navigation/: AdaptiveRootView.swift  NavigationDestination.swift  SidebarView.swift
dashboard/ios/WNNDashboard/Sources/WNNDashboard/Services/: APIClient.swift  ConnectionManager.swift  SettingsStore.swift  TrustingURLSession.swift  WebSocketManager.swift
dashboard/ios/WNNDashboard/Sources/WNNDashboard/Utilities/: Formatters.swift  LayoutConstants.swift  Theme.swift
dashboard/ios/WNNDashboard/Sources/WNNDashboard/ViewModels/: CheckpointsViewModel.swift  DashboardViewModel.swift  FlowsViewModel.swift
dashboard/ios/WNNDashboard/WNNDashboard.xcodeproj/: project.pbxproj
dashboard/ios/WNNDashboard/WNNDashboard/App/: ContentView.swift  WNNDashboardApp.swift
dashboard/ios/WNNDashboard/WNNDashboard/Models/: AnyCodable.swift  Checkpoint.swift  Experiment.swift  Flow.swift  GenomeEvaluation.swift  HealthCheck.swift  Iteration.swift  Phase.swift  Snapshot.swift  StatusEnums.swift  WebSocketMessage.swift
dashboard/ios/WNNDashboard/WNNDashboard/Services/: APIClient.swift  ConnectionManager.swift  SettingsStore.swift  WebSocketManager.swift
dashboard/ios/WNNDashboard/WNNDashboard/Utilities/: Formatters.swift  Theme.swift
dashboard/ios/WNNDashboard/WNNDashboard/ViewModels/: CheckpointsViewModel.swift  DashboardViewModel.swift  FlowsViewModel.swift
dashboard/ios/WNNDashboard/WNNDashboard/Views/Dashboard/: DashboardView.swift  DualAxisChartView.swift  IterationDetailSheet.swift  IterationsListView.swift  MetricsCardView.swift  PhaseTimelineView.swift  ProgressBarView.swift
dashboard/ios/WNNDashboard/WNNDashboard/Views/Flows/: FlowCardView.swift  FlowDetailView.swift  FlowsListView.swift  NewFlowView.swift
dashboard/ios/WNNDashboard/WNNDashboard/Views/Settings/: SettingsView.swift
dashboard/scripts/: gen-certs.sh
dashboard/src/: main.rs
dashboard/src/api/: mod.rs
dashboard/src/db/: mod.rs
dashboard/src/models/: mod.rs
dashboard/src/parser/: mod.rs
dashboard/src/watcher/: mod.rs
src/wnn/ram/strategies/accelerator/: Cargo.toml  adaptation.rs  adaptive.rs  bitwise_ramlm.rs  database.rs  eval_worker.rs  gating.rs  lib.rs  metal_evaluator.rs  metal_gating.rs  metal_ramlm.rs  metal_stats.rs  metal_train.rs  multistage.rs  neighbor_search.rs  neuron_memory.rs  per_cluster.rs  ram.rs  ramlm.rs  sparse_memory.rs  token_cache.rs  twostage.rs
src/wnn/ram/strategies/accelerator/shaders/: batched_sparse_forward.metal  bitwise_ce.metal  ce_reduce.metal  evaluate.metal  gating.metal  neuron_stats.metal  ramlm.metal  sparse_ce.metal  sparse_forward.metal  train_address.metal
(+679 files in other folders)
