[project]
name = "wnn"
version = "2025.12.20.00.09"
description = "Weightless Neural Network Research"
authors = [{name="Luiz Alberto Crispiniano Garcia"}]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wnn*"]