[project]
name = "wnn"
version = "2025.01.01.09.40"
description = "Weightless Neural Network Research"
authors = [{name="Luiz Alberto Crispiniano Garcia"}]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wnn*"]

[project.optional-dependencies]
hybrid = ["transformers>=4.30"]

[project.scripts]
wnn-exp = "wnn.ram.experiments.cli:main"