[package]
name = "wnn-dashboard"
version = "0.1.0"
edition = "2024"
authors = ["lacg"]
description = "Real-time dashboard for WNN architecture search experiments"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Log parsing
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"  # File watching

# Error handling
anyhow = "1"
thiserror = "1"

# Unix signals (for stop functionality)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
